--- a/src/main/resources/templates/fragments/admin-panel-navi.html
+++ b/src/main/resources/templates/fragments/admin-panel-navi.html
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/admin-posts">
                     <i class="fa fa-book" aria-hidden="true"></i> Публикации
                 </a>
             </li>
