--- a/src/main/resources/templates/fragments/slider.html
+++ b/src/main/resources/templates/fragments/slider.html
@@ -1,30 +1,18 @@
 <th:block th:fragment>
     <div id="demo" class="carousel slide" data-ride="carousel">
         <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
+            <div th:each="slide, iter : ${sliderPicsPlusOne}">
+            <li data-target="#demo" th:attr="data-slide-to=${iter.index}"></li>
+            </div>
+<!--            <li data-target="#demo" data-slide-to="1"></li>-->
+<!--            <li data-target="#demo" data-slide-to="2"></li>-->
         </ul>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://wallpaperaccess.com/full/244397.jpg" alt="Los Angeles" height="500px" width="100%">
+            <div class="carousel-item" th:each="slide : ${sliderPicsPlusOne}">
+                <img th:src="${slide.getPhotoPath()}" alt="test" height="500px" width="100%">
                 <div class="carousel-caption">
-                    <h3>Los Angeles</h3>
-                    <p>We had such a great time in LA!</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://wallpapercave.com/wp/wp2015591.jpg" alt="Chicago" height="500px" width="100%">
-                <div class="carousel-caption">
-                    <h3>Chicago</h3>
-                    <p>Thank you, Chicago!</p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://i.pinimg.com/originals/51/37/b8/5137b802a99d70a6c15ce9592f44bd84.jpg" alt="New York" height="500px" width="100%">
-                <div class="carousel-caption">
-                    <h3>New York</h3>
-                    <p>We love the Big Apple!</p>
+                    <h3><span th:text="${slide.title}"></span></h3>
+                    <p><span th:text="${slide.photoText}"></span></p>
                 </div>
             </div>
         </div>
@@ -35,4 +23,9 @@
             <span class="carousel-control-next-icon"></span>
         </a>
     </div>
+    <script>
+        $(document).ready(function () {
+            $('#demo').find('.carousel-item').first().addClass('active');
+        });
+    </script>
 </th:block>
